client/assets/styles/scss/sidebar/sidebar.scss
.sidebar {
  @extend %webkit-flicker;
  background: $white;
  border-right: 1px solid $gray-lighter;
  display: flex;
  flex-direction: column;
  float: left;
  font-size: 15px;
  height: calc(100vh - 60px);
  line-height: 24px;
  position: relative;
  transition: none;
  width: 240px;
  z-index: $z-sidebar;

  &.full-height {
    height: 100vh;
  }

  // width if sidebar is present
  + .content {
    float: right;
    position: relative;
    width: calc(100% - 240px);

    > .spinner-wrapper {
      position: absolute;
    }
  }

  .icons-status {
    flex: 0 0 auto;
    margin: 0 6px 0 12px;
  }
}

.sidebar-heading {
  cursor: pointer;
  flex: 0 0 60px;
  line-height: 60px;
  position: relative;

  &.closed {
    color: $gray;

    &:hover {
      color: $gray-darker;
    }
  }

  .icons-disclose {
    float: left;
    left: -3px;
    top: 18px;
    transition: none;
    width: 15px;

    .closed & {
      transform: rotate3d(0,0,1,-90deg);
    }
  }

  // for add buttons next to section headings, like in File Explorer
  .btn {
    height: 60px;

    .iconnables {
      width: 24px;
    }
  }
}

// main sidebar
.nav-sidebar {
  background: $gray-lighterest;
  float: left;

  .spinner-wrapper {
    margin-top: 30px;
  }
}

.containers {
  flex: 1 1 auto;
  overflow-x: hidden;
  overflow-y: auto;
  padding-top: 15px;
}

.list-containers {
  border-bottom: 1px solid $gray-lighter; // lines below categories
  margin: 0 9px;
  padding: 9px 0;

  .list-item {
    color: $gray;
    display: flex;
    height: 27px;
    line-height: 27px;
    margin: 0 -9px;
    padding: 0 12px 0 21px;
    position: relative;

    &:hover {
      background: rgba($gray-light,.1);

      .btn-hide {
        display: block;
      }
    }

    &:active,
    &.active {
      background: $purple-lightest;
      background: $purple-lightest;
      color: $purple-light;
    }

    // reset branch header
    &.small {
      pointer-events: auto;
    }

    // status
    > .icons-status {
      flex: 0 0 auto;
      margin: 0 6px 0 0;
      top: 9px;
    }

    // text
    > .span {
      flex: 1 1 auto;
    }

    // reset configure buttons
    > .btn-icon {
      background: none;
      border: 0;
      height: 27px;
      right: 12px;
      top: 0;
      width: 27px;
    }

    // configure button
    > .btn-configure {
      opacity: .7;

      &:hover {
        opacity: .85;
      }

      &:active,
      &.active {
        opacity: 1;
      }
    }

    .icons-advanced {
      width: 12px;
    }

    // hide button
    > .btn-hide {
      display: none;
      flex: 0 0 auto;
      line-height: 27px;
      position: relative;
      right: 0;
      top: 0;
    }
  }
}

// "more" button
.btn-more {
  cursor: pointer;
  padding-left: 27px;
}

// hide and more states
.btn-hide,
.btn-more {
  color: $gray;
  font-style: italic;

  &:hover {
    color: $gray-dark;
  }

  &:active,
  &.active {
    color: $gray-darker;
  }
}

